# custom-chatbot-with-gpt4

./: README.md  app.py  async_chat.py  async_doggo.py  async_openapi.py  chat.db  chat_BK.db  chatapp_notready.py  cliapp.py  database.py  doggoapp.py  hellogen.py  markdown-to-html.mmd  openaiapp.py  prettieropenaiapp.py  pyproject.toml  pyramid_chat.py  request-response.mmd  sse.mmd  streaming-request-response.mmd
fasttemplates/: index.jinja2  layout.jinja2
fasttemplates/partials/: user_message.jinja2
src/custom_chatbot/: __init__.py
templates/: doggo.jinja2  home.jinja2  index.jinja2  layout.jinja2  openai.jinja2
templates/partials/: ai_message.jinja2  streaming_chunk.jinja2
