[tool.poetry]
name = "custom-chatbot"
version = "0.1.0"
description = ""
authors = ["ChiefKemist"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyramid = "^2.0.2"
Jinja2 = "^3.1.2"
pyramid-jinja2 = "^2.10"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
langchain = "^0.1.0"
pyramid-debugtoolbar = "^4.10"
asgiref = "^3.7.2"
httpx = "^0.26.0"
openai = "^1.7.2"
sqlalchemy = "^2.0.25"
fastapi = "^0.109.0"
fastui = "^0.4.0"
python-multipart = "^0.0.6"
markdown = "^3.5.2"
waitress = "^2.1.2"
pygments = "^2.17.2"
semantic-router = "^0.0.18"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
