[project]
name = "custom-chatbot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chiefkemist", email = "chiefkemist+git@outcastgeek.tech" }
]
dependencies = [
    "pyramid>=2.0.2",
    "jinja2>=3.1.4",
    "pyramid-jinja2>=2.10.1",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.2.1",
    "pyramid-debugtoolbar>=4.12.1",
    "asgiref>=3.8.1",
    "httpx>=0.27.0",
    "openai>=1.30.3",
    "sqlalchemy>=2.0.30",
    "fastapi>=0.111.0",
    "fastui>=0.6.0",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
    "waitress>=3.0.0",
    "pygments>=2.18.0",
    "semantic-router>=0.0.44",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "ruff>=0.4.5",
]

[tool.rye.scripts]
app_dev = "uvicorn app:asgi_app --reload"
openaiapp_dev = "uvicorn openaiapp:asgi_app --reload"
pyramid_chat_dev = "uvicorn pyramid_chat:asgi_app_dev --reload"
async_openapi_dev = "python3 async_openapi.py"
doggoapp_dev = "uvicorn doggoapp:asgi_app --reload"
async_doggo_dev = "uvicorn async_doggo:app --reload"
cliapp_dev = "python3 cliapp.py"
prettieropenaiapp_dev = "uvicorn prettieropenaiapp:app --reload"
async_chat_dev = "uvicorn async_chat:app --reload"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/custom_chatbot"]
